--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components{
+  .paragraph{
+    @apply 
+    text-xl px-4 text-left
+    md:text-3xl
+    md:px-8
+    md:leading-10
+    text-gray-600
+  } 
+  .subtitles{
+    @apply 
+      text-4xl 
+      text-blue-600
+      font-medium 
+      text-center 
+      pt-6 
+      pb-6 
+      md:text-6xl
+      md:pt-12
+      md:pb-12
+      lg:text-gray-600
+  }
+  .contentTitle{
+    @apply
+    text-gray-600
+    text-3xl 
+    pb-4 
+    pt-6
+    md:text-5xl
+  }
+}
+
