--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,16 @@
     text-3xl 
     pb-4 
     pt-6
-    md:text-5xl
+    md:text-4xl
+  }
+  .card{
+    @apply
+    lg:basis-1/2 
+    lg:flex-1
+    mx-auto
+    lg:max-w-[45%]
+    xl:basis-1/3
+    xl:max-w-[30%]
   }
 }
 
