--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,8 @@
 @layer components{
   .paragraph{
     @apply 
-    text-xl px-4 text-left
+    text-xl px-2 text-left
+    m-auto
     md:text-3xl
     md:px-8
     md:leading-10
