--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,18 +6,17 @@
   .paragraph{
     @apply 
     text-lg px-2 text-left
+    pb-6
     m-auto
     md:text-3xl
     md:px-8
     md:leading-10
-    text-gray-600
     lg:text-center
     lg:text-xl
   } 
   .subtitles{
     @apply 
       text-4xl 
-      text-blue-600
       font-medium 
       text-center 
       pt-6 
@@ -29,7 +28,6 @@
   }
   .contentTitle{
     @apply
-    text-gray-600
     text-3xl 
     pb-4 
     pt-6
@@ -39,9 +37,11 @@
   }
   .card{
     @apply
+    shadow-lg 
     lg:basis-1/2 
     lg:flex-1
     mx-auto
+    rounded-md
     lg:max-w-[45%]
     xl:basis-1/3
     xl:max-w-[50%]
