--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,7 @@
     md:leading-10
     lg:text-center
     lg:text-xl
+    text-gray
   } 
   .subtitles{
     @apply 
@@ -24,6 +25,7 @@
       md:pt-12
       md:pb-4
       lg:text-4xl
+      text-gray
   }
   .contentTitle{
     @apply
@@ -33,16 +35,18 @@
     md:text-4xl
     md:pt-12
     lg:text-2xl
+    text-gray
   }
   .card{
     @apply
     shadow-lg 
+    pb-4
     lg:basis-1/2 
     lg:flex-1
     mx-auto
     md:max-w-[80%]
     rounded-md
-    lg:max-w-[45%]
+    lg:max-w-[48%]
     xl:basis-1/3
     xl:max-w-[50%]
     xl:p-1
